--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "astro": "^4.11.5",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13"
   }
 }
