--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "typescript": "^5.5.3"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.13"
+    "@tailwindcss/typography": "^0.5.13",
+    "prettier": "^3.3.2",
+    "prettier-plugin-astro": "^0.14.0"
   }
 }
