chore: Update user email and name in GitHub Pages branch setup

--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -91,8 +91,8 @@ jobs:
 
       - name: Set GitHub Pages branch
         run: |
-          git config --global user.email "you@example.com"
-          git config --global user.name "Your Name"
+          git config --global user.email "josetelesmaciel@gmail.com"
+          git config --global user.name "José Teles"
           git checkout --orphan gh-pages
           git rm -rf .
           git commit --allow-empty -m "Initializing gh-pages branch"
